wp-content/themes/gmc/css/theme.css
/* ... */
.navbar.white {
  min-height: 70px;
  margin-bottom: 0;
  border-radius: 0;
  border: 0;
  z-index: 999;
  -webkit-font-smoothing: antialiased; }
  @media (min-width: 768px) {
    .navbar.white {
      background: #fff;
      box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.75); } }
  @media (min-width: 1200px) {
    .navbar.white .container {
      width: 1000px; } }
  .navbar.white .navbar-header .navbar-brand {
    color: #333;
    font-weight: bold;
    font-size: 30px;
    font-family: "Lato", "Helvetica Neue", Arial;
    padding-top: 24px; }
    @media (max-width: 767px) {
      .navbar.white .navbar-header .navbar-brand {
        color: #fff;
        font-size: 20px; } }
  .navbar.white .navbar-header .navbar-toggle {
    margin-top: 17px; }
  @media (min-width: 768px) {
    .navbar.white .navbar-collapse {
      text-align: center; } }
  @media (min-width: 768px) {
    .navbar.white .navbar-collapse .navbar-nav {
      float: none;
      display: inline-block; } }
  .navbar.white .navbar-collapse .navbar-nav > li {
    float: none;
    display: inline-block; }
    @media (max-width: 767px) {
      .navbar.white .navbar-collapse .navbar-nav > li {
        display: block; } }
    .navbar.white .navbar-collapse .navbar-nav > li.active > a {
      background: none;
      color: #333; }
    .navbar.white .navbar-collapse .navbar-nav > li > a {
      padding: 25px 20px;
      color: #555;
      z-index: 1001;
      -webkit-transition: color 0.2s linear;
      -moz-transition: color 0.2s linear;
      -ms-transition: color 0.2s linear;
      -o-transition: color 0.2s linear;
      transition: color 0.2s linear; }
      .navbar.white .navbar-collapse .navbar-nav > li > a.signup {
        border: 1px solid #CED7DF;
        border-radius: 5px;
        padding: 8px 11px;
        font-size: 13px;
        color: #333;
        margin-left: 20px; }
      @media (max-width: 767px) {
        .navbar.white .navbar-collapse .navbar-nav > li > a {
          padding: 18px 20px;
          color: #fff; } }
      .navbar.white .navbar-collapse .navbar-nav > li > a .fa-chevron-down {
        color: #777;
        font-size: 8px;
        margin-left: 2px;
        position: relative;
        top: -1px; }
      .navbar.white .navbar-collapse .navbar-nav > li > a:hover {
        color: #333; }
        @media (max-width: 767px) {
          .navbar.white .navbar-collapse .navbar-nav > li > a:hover {
            color: #fff; } }
    @media (min-width: 768px) {
      .navbar.white .navbar-collapse .navbar-nav > li.open > a {
        background: #fff;
        color: #333; } }
    .navbar.white .navbar-collapse .navbar-nav > li.open > a .caret {
      border-top-color: #999;
      border-bottom-color: #999; }
    @media (max-width: 767px) {
      .navbar.white .navbar-collapse .navbar-nav > li.open ul.dropdown-menu a {
        color: #fff;
        padding: 12px 18px 12px 30px; } }
    .navbar.white .navbar-collapse .navbar-nav > li ul.dropdown-menu {
      text-align: left;
      border: 0;
      padding: 0 0 10px;
      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.175); }
      .navbar.white .navbar-collapse .navbar-nav > li ul.dropdown-menu li a {
        padding: 8px 18px; }

.navbar.blue {
  min-height: 70px;
  margin-bottom: 0;
  border-radius: 0;
  border: 0;
  z-index: 999;
  -webkit-font-smoothing: antialiased; }
  @media (min-width: 768px) {
    .navbar.blue {
      background: rgba(8,43,77,.9);
      box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.75); } }
  @media (min-width: 1200px) {
    .navbar.blue .container {
      width: 1000px; } }
  .navbar.blue .navbar-header .navbar-brand {
    color: #fff;
    font-weight: bold;
    font-size: 30px;
    font-family: "Lato", "Helvetica Neue", Arial;
    padding-top: 8px; }
    .navbar.blue .navbar-header .navbar-brand img {
      height: 55px;
      width: 55px;
    }
    @media (max-width: 767px) {
      .navbar.blue .navbar-header .navbar-brand {
        color: #fff;
        font-size: 20px; } }
  .navbar.blue .navbar-header .navbar-toggle {
    margin-top: 17px; }
  @media (min-width: 768px) {
    .navbar.blue .navbar-collapse {
      text-align: center; } }
  @media (min-width: 768px) {
    .navbar.blue .navbar-collapse .navbar-nav {
      float: none;
      display: inline-block; } }
  .navbar.blue .navbar-collapse .navbar-nav > li {
    float: none;
    display: inline-block; }
    @media (max-width: 767px) {
      .navbar.blue .navbar-collapse .navbar-nav > li {
        display: block;
         } }
    .navbar.blue .navbar-collapse .navbar-nav > li.active > a {
      background: none;
      color: #97c0e6; }
    .navbar.blue .navbar-collapse .navbar-nav > li > a {
      font-family: 'Raleway', serif;
        font-weight: 800;
      padding: 25px 20px;
      color: #fff;
      z-index: 1001;
      -webkit-transition: color 0.2s linear;
      -moz-transition: color 0.2s linear;
      -ms-transition: color 0.2s linear;
      -o-transition: color 0.2s linear;
      transition: color 0.2s linear; }
      #menu-item-53 a {
        border: 2px solid white;
        border-radius: 4px;
        padding: 10px 20px;
        margin: 15px 0;
        -webkit-transition: background 0.2s linear;
        -moz-transition: background 0.2s linear;
        -ms-transition: background 0.2s linear;
        -o-transition: background 0.2s linear;
        transition: background 0.2s linear;
      }
      #menu-item-53 a:hover {
        color:rgba(8,43,77,.9);
        background:white;
      }
      .navbar.blue .navbar-collapse .navbar-nav > li > a.signup {
        border: 1px solid #CED7DF;
        border-radius: 5px;
        padding: 8px 11px;
        font-size: 13px;
        color: #fff;
        margin-left: 20px; }
      @media (max-width: 767px) {
        .navbar.blue .navbar-collapse .navbar-nav > li > a {
          padding: 18px 20px;
          color: #fff; } }
/* ... */

